Migrating to SDN 6  - work in progress  - Addressing TODOs, clean up and refactoring